<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@color/Blue"
        android:gravity="center"
        android:paddingStart="95dp"
        android:paddingEnd="25dp"
        android:text="@string/math_app"
        android:textColor="#0D47A1"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/question_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/nunito_sans"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/help"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <EditText
        android:id="@+id/input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_prompt"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="Math problem"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center_vertical"
        android:hint="@string/enter"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:shadowColor="#9FBDD5" />

    <Button
        android:id="@+id/classify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_text"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/submit"
        android:textAllCaps="true"
        app:iconSize="16dp" />

    <TextView
        android:id="@+id/output_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/classify_button"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/radius"
        android:elevation="4dp"
        android:fontFamily="@font/nunito_sans"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="50dp"
        android:text="@string/prob_sub"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/resources"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/output_text"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="4dp"
        android:text="@string/resources_header"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/resources_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resources"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/nunito_sans"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/personalized_header"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/resources_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resources_more"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/radius"
        android:elevation="4dp"
        android:fontFamily="@font/nunito_sans"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        android:paddingTop="6dp"
        android:paddingRight="4dp"
        android:paddingBottom="50dp"
        android:text="@string/resources_list"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="101dp"
        android:layout_height="92dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        app:srcCompat="@drawable/icon" />


</RelativeLayout>
